kubernetes/apps/dev/dagster/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dagster
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dagster.toskbot.xyz`)
      kind: Rule
      services:
        - name: dagster-dagster-webserver
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dagster
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: dagster.toskbot.xyz
